# corgi-the-bot

./: .gitignore  DupQueue.hs  JsonUtil.hs  LICENSE  Main.hs  Pastebin.hs  README.md  corgi-the-bot.cabal  corgi-the-bot.conf  flake.nix  hie.yaml  input  stack.yaml
.github/: FUNDING.yml
Api/: Pastebin.hs
Control/: EvalM.hs
Data/: Config.hs  UniqueQueue.hs
