cabal-version: 2.4
name:          corgi-the-bot
version:       0.1.0.0
synopsis:      A frontend for Corgi The Bot on Discord
description:   A frontend for Corgi The Bot on Dicosrd
license:       MIT
license-file:  LICENSE
author:        Junyoung/Clare Jang
maintainer:    jjc9310@gmail.com
copyright:     2021 Junyoung Jang
category:      Development
build-type:    Simple

executable corgi-the-bot
  main-is:            Main.hs
  other-modules:
    Api.Pastebin
    Control.EvalM
    Data.Config
    Data.UniqueQueue

  build-depends:
    , aeson
    , base             ^>=4.14
    , bytestring
    , containers
    , data-default
    , discord-haskell  ^>=1.8
    , exceptions
    , lens
    , mtl
    , network
    , process
    , text
    , time

  -- Simulate GHC2021 and more
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StarIsType
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-deriving-strategies
    -Wmissing-home-modules -Wmonomorphism-restriction -Wpartial-fields
    -Wredundant-constraints -Wunused-packages -Wunused-type-patterns
